# Assignment-2-CPP

./: CMakeLists.txt
Operators/include/: BatchNormalization.h  Convolution2D.h  Dense.h  Flatten.h  MaxPooling2D.h
Operators/src/: BatchNormalization.cpp  Convolution2D.cpp  Dense.cpp  Flatten.cpp  MaxPooling2D.cpp
configs/json/: final_configuration_model.json  updated_configuration_model.json
src/: main.cpp
